--- a/TugasUpdateUTS/nbproject/private/private.properties
+++ b/TugasUpdateUTS/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\Daun Meteor\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\Amelia\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
